--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ license-file = "LICENSE"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-base64 = "0.12"
-reqwest = { version = "0.10", features = ["blocking"] }
+base64 = "0.21.0"
+reqwest = { version = "0.11", features = ["blocking","rustls-tls"] }
 regex = "1"
 lazy_static = "1.4.0"
 serde = { version = "1.0", features=["derive"]}
@@ -42,4 +42,4 @@ name = "responseheaders"
 path = "examples/responseheaders.rs"
 
 [dev-dependencies]
-serde-xml-rs = "0.4"
+serde-xml-rs = "0.6.0"
